--- a/fields_mapping.json
+++ b/fields_mapping.json
@@ -37,7 +37,7 @@
     },
     {
         "source": "clickup",
-        "field": "A1c Adres",
+        "field": "A1c Naam Opject",
         "ui_label": "NaamObject",
         "xml_path": "./Objecten/Object/ObjectAlgemeen/ObjectObject/NaamObject"
     },
