--- a/fields_mapping.json
+++ b/fields_mapping.json
@@ -37,6 +37,12 @@
     },
     {
         "source": "clickup",
+        "field": "A1c Adres",
+        "ui_label": "NaamObject",
+        "xml_path": "./Objecten/Object/ObjectAlgemeen/ObjectObject/NaamObject"
+    },
+    {
+        "source": "clickup",
         "field": "A1c Naam Opject",
         "ui_label": "Naam Object",
         "xml_path": "./Objecten/Object/ObjectAlgemeen/ObjectObject/NaamObject"
